# LLM-Quiz-Generator

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
quiz_app/: main.py
quiz_app/components/: quiz_history.py  sidebar.py
quiz_app/topics/: topics.py
